# trending-repo-worker

./: .dev.vars.example  .gitignore  Cargo.toml  README.md  wrangler.toml
.github/workflows/: checks.yaml  prod.yaml
src/: chad_bot.rs  consts.rs  lib.rs  models.rs  services.rs  trending_repo.rs
