[package]
name = "trending-repo-worker"
version = "0.1.0"
edition = "2021"
authors = [ "Andres Velasco <velasco.andrs@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http', 'axum'] }
worker-macros = { version="0.2.0", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["wasm-bindgen"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }
